tests/expectations/parser/structs/comma_separators_fail.out
Error [EPAR0370005]: expected '}', ',', '?' -- found 'y'
    --> test:4:9
     |
   4 |         y: u8
     |         ^
